# Qt6-GUI-template

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build.sh
include/: main_window.h
src/: main.cpp  main_window.cpp
